package protoFiles;

option java_package = "proto";
option java_outer_classname = "RoleProto";

//请求登录
message LoginReq_1001001{
	required string account = 1;//账号
	required string password = 2;//密码
}
message LoginResp_1001001{
	required string account = 1;//账号
	optional string rid = 2;//账号id
	repeated Role roles = 3;//角色列表
}

message Item{
	required int32 type = 1;
	required int32 id = 2;
	required int32 num = 3;
}

message Role{
    required int32 id = 1;//id
    required string name = 2;//名称
    optional int32 coin = 3;//金币数
    optional int32 gem = 4;//钻石
    optional int32 exp = 5;//经验
    optional string scene = 6;//场景名称
    optional int32 area_id = 7;//区域id
    optional float x = 8;
    optional float y = 9;
    optional float z = 10;
    optional float ex = 11;
    optional float ey = 12;
    optional float ez = 13;
    optional int32 hp = 14;
    optional int32 mp = 15;
    optional int32 max_hp = 16;
    optional int32 max_mp = 17;

}

//注册
message RegisterReq_1001002{
	required string account = 1;//账号
    required string password = 2;//密码
}
message RegisterResp_1001002{
    required int32 code = 1;
}


// 创建角色
message CreateRoleReq_1001003{
    required string name = 1;//名称
}

// 进入游戏
message EnterGameReq_1001004{
    required int32 role_id = 1;//角色id
}
message EnterGameResp_1001004{
    required Role role = 1;//角色信息
    repeated Item items = 2;//拥有物品
}

//离线
message OutGameReq_1001005{
}
message OutGameResp_1001005{
}
